# xgui

./: .gitignore  CMakeLists.txt  README.md  notes.md  setup.cfg  setup.py
src/xgui/: guimodule.c  guimodulewrapped.c  xgui.cp311-win_amd64.pyd  xguimodule.c
src/xgui.egg-info/: PKG-INFO  SOURCES.txt
tests/: main.py  test_gui.py
xgui/: __init__.py  gui.py  guimodule.c
